# inpulse_bot

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.dev.yaml  docker-compose.yaml  pyproject.toml  settings.example.yaml  settings.schema.yaml
.github/workflows/: deploy.yaml
alembic/: env.py
alembic/versions/: 28e62a71a49f_add_calendars_table.py  298387f727b6_add_whitelisted_users_table.py  bc19b7585c99_subscriptions.py  ca48621aa7ce_initial_migration.py
src/: config.py  config_schema.py  prepare.py
src/bot/: __main__.py  app.py  jobs.py  states.py
src/bot/dialogs/: __init__.py  account.py  admin.py  calendar_setup.py  recommend.py  root.py  task_create.py  task_list.py
src/bot/middlewares/: auth.py  whitelist.py
src/bot/routers/: commands.py
src/db/: database.py  schema.py
src/db/repositories/: __init__.py  calendar_events.py  calendars.py  recommendation_log.py  statistics.py  tasks.py  users.py  whitelist.py
src/modules/calendar/: ical_parser.py  models.py  service.py
src/modules/recommendations/: engine.py  models.py  service.py
src/modules/tasks/: models.py  service.py
