[project]
name = "inpulse-bot"
version = "0.1.0"
description = "InPulse MVP - Smart task recommendations for free windows"
authors = [{ name = "zolotarev" }]
readme = "README.md"
requires-python = ">=3.13,<3.15"

dependencies = [
    "aiogram>=3.27.0",
    "aiogram-dialog>=2.6.0",
    "aiohttp>=3.13.5",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "sqlalchemy>=2.0.49",
    "colorlog>=6.10.1",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "ruff>=0.15.12",
    "pytest>=9.0.3",
    "greenlet>=3.5.0",
    "pytest-asyncio>=1.3.0",
    "icalendar>=6.1.1",
    "recurring-ical-events>=3.3.3",
    "pytz>=2026.2",
    "redis>=8.0.1",
    "openai>=2.44.0",
    "apscheduler>=3.11.3",
]

[tool.ruff]
line-length = 120
target-version = "py313"
lint.extend-select = ["I", "UP", "PL"]
lint.extend-ignore = [
    "PLC0415",
    "PLR",
    "F403",  # import * are ok
    "F405"   # names imported by * are ok
]
